Strim to the output of echo command to retreive the env var value. Also improved unit test.

--- a/src/tests/projects/p1/demorepo.yml
+++ b/src/tests/projects/p1/demorepo.yml
@@ -2,4 +2,4 @@ test:
     script: ./test.sh 
 
 deploy: 
-    script: ./deploy.sh $DEPLOY_VAR $DEPLOY_ENV_VAR
+    script: ./deploy.sh "${DEPLOY_ENV_VAR}"
