--- a/src/tests/config.yml
+++ b/src/tests/config.yml
@@ -6,7 +6,15 @@ ci-tool:
     url: https://gitlab.com
     
 projects:
-    path: projects
-    order:
-        - p3
-        - p2
+    p1:
+        path: 'projects/p1'
+    p2:
+        path: 'projects/p2'
+        depends:
+            - p1
+    p3:
+        path: 'projects/p3'
+        depends:
+            - p1
+            - p2
+
