feat: Combined both demorepo.yml and config.yml
BREAKING CHANGE: older project wont work wthout combimning both files

closes #33

--- a/src/tests/projects/p1/demorepo.yml
+++ b/src/tests/projects/p1/demorepo.yml
@@ -1,2 +1,3 @@
-deploy: 
-    script: ./deploy.sh $(cat requirements.txt)
+stages:
+    deploy: 
+        script: ./deploy.sh $(cat requirements.txt)
