--- a/src/tests/demorepo.yml
+++ b/src/tests/demorepo.yml
@@ -1,32 +1,44 @@
+demorepo:
+    version: 1.0.0
 
-test-p2:
-  script: ./test.sh
-  projects:
-    - p2
+ci-tool:
+    name: gitlab
+    url: https://gitlab.com
+    
+projects:
+    p1:
+        path: 'projects/p1'
+    p2:
+        path: 'projects/p2'
+        depends:
+            - p1
+    p3:
+        path: 'projects/p3'
+        depends:
+            - p1
+            - p2
 
-test-all:
-  script: ./test.sh
-  projects:
-    - p1
-    - p2
+stages:
+  test-p2:
+    script: ./test.sh
+    projects:
+      - p2
 
-test-all-p3-fails:
-  script: ./test.sh
-  projects:
-    - p1
-    - p2
-    - p3
+  test-all:
+    script: ./test.sh
+    projects:
+      - p1
+      - p2
 
-test-all-invalid:
-  script: ./test.sh
-  projects:
-    - p1
-    - p2
-    - p3
-    - p4
+  test-all-p3-fails:
+    script: ./test.sh
+    projects:
+      - p1
+      - p2
+      - p3
 
-test-all-local-p1:
-  script: ./deploy.sh
-  projects:
-    - p1
-    - p2
+  test-all-local-p1:
+    script: ./deploy.sh
+    projects:
+      - p1
+      - p2
